PL3/PSeIntParser.java
// Generated from PSeIntParser.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class PSeIntParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMENTARIO_LINEA=1, ASIGNAR=2, PARENTESIS_ABRIR=3, PARENTESIS_CERRAR=4, 
		CORCHETE_ABRIR=5, CORCHETE_CERRAR=6, SIGNOIGUAL=7, COMA=8, DOSPUNTOS=9, 
		PUNTOCOMA=10, SALTOLINEA=11, MAYOR=12, MENOR=13, IGUAL=14, MENORIGUAL=15, 
		MAYORIGUAL=16, DISTINTO=17, ESPAR=18, ESIMPAR=19, ESPOSITIVO=20, ESNEGATIVO=21, 
		ESCERO=22, ESDIVISIBLE=23, ES=24, CONJUNCION=25, DISYUNCION=26, NEGACION=27, 
		SUMA=28, RESTA=29, MULTIPLICACION=30, DIVISION=31, POTENCIACION=32, MODULO=33, 
		INT=34, FLOAT=35, STRING=36, STRING_SIMPLE=37, STRING_DOBLE=38, ALGORITMO=39, 
		FINALGORITMO=40, DEFINIR=41, COMO=42, REAL=43, ENTERO=44, LOGICO=45, VERDADERO=46, 
		FALSO=47, CARACTER=48, DIMENSION=49, LEER=50, ESCRIBIR=51, BORRAR=52, 
		ESPERARTECLA=53, ESPERAR=54, SEGUNDOS=55, MILISEGUNDOS=56, SINSALTAR=57, 
		SI=58, ENTONCES=59, SINO=60, FINSI=61, SEGUN=62, HACER=63, CONPASO=64, 
		DEOTROMODO=65, FINSEGUN=66, MIENTRAS=67, FINMIENTRAS=68, REPETIR=69, HASTAQUE=70, 
		PARA=71, PARACADA=72, DESDE=73, DE=74, HASTA=75, FINPARA=76, FUNCION=77, 
		PORVALOR=78, PORREFERENCIA=79, FINFUNCION=80, PI=81, RAIZ=82, ABS=83, 
		LN=84, EXP=85, SEN=86, COS=87, TAN=88, ASEN=89, ACOS=90, ATAN=91, AZAR=92, 
		ALEATORIO=93, TRUNC=94, REDON=95, CONVERTIRANUMERO=96, CONVERTIRATEXTO=97, 
		LONGITUD=98, SUBCADENA=99, MAYUSCULAS=100, MINUSCULAS=101, CONCATENAR=102, 
		IDENTIFICADOR=103, WS=104;
	public static final int
		RULE_programa = 0, RULE_inicioalgoritmo = 1, RULE_instruccion = 2, RULE_primitiva = 3, 
		RULE_definir_var = 4, RULE_dimension_var = 5, RULE_arreglo = 6, RULE_asignacion = 7, 
		RULE_lectura = 8, RULE_escritura = 9, RULE_otras = 10, RULE_borrando = 11, 
		RULE_esperar_tecla = 12, RULE_esperar_tiempo = 13, RULE_definir_func = 14, 
		RULE_argumentos = 15, RULE_funciones = 16, RULE_funciones_arg = 17, RULE_control = 18, 
		RULE_condicional = 19, RULE_si_op = 20, RULE_segun_op = 21, RULE_repetitiva = 22, 
		RULE_mientras_op = 23, RULE_repetir_op = 24, RULE_para_op = 25, RULE_llamar_funcion = 26, 
		RULE_expr = 27, RULE_exp = 28, RULE_condicion = 29, RULE_expr_relacional = 30, 
		RULE_expr_logico = 31, RULE_mayor = 32, RULE_menor = 33, RULE_igual = 34, 
		RULE_menorigual = 35, RULE_mayorigual = 36, RULE_distinto = 37, RULE_conjuncion = 38, 
		RULE_disyuncion = 39, RULE_negacion = 40, RULE_suma = 41, RULE_resta = 42, 
		RULE_multiplicacion = 43, RULE_division = 44, RULE_potenciacion = 45, 
		RULE_modulo = 46, RULE_variable = 47, RULE_identificador = 48, RULE_asignar = 49, 
		RULE_parentesis_abrir = 50, RULE_parentesis_cerrar = 51, RULE_corchete_abrir = 52, 
		RULE_corchete_cerrar = 53, RULE_saltolinea = 54, RULE_signoigual = 55, 
		RULE_coma = 56, RULE_dospuntos = 57, RULE_puntocoma = 58, RULE_algoritmo = 59, 
		RULE_finalgoritmo = 60, RULE_definir = 61, RULE_dimension = 62, RULE_como = 63, 
		RULE_real = 64, RULE_entero = 65, RULE_logico = 66, RULE_verdadero = 67, 
		RULE_falso = 68, RULE_caracter = 69, RULE_leer = 70, RULE_escribir = 71, 
		RULE_borrar = 72, RULE_esperartecla = 73, RULE_esperar = 74, RULE_segundos = 75, 
		RULE_milisegundos = 76, RULE_sinsaltar = 77, RULE_si = 78, RULE_entonces = 79, 
		RULE_sino = 80, RULE_finsi = 81, RULE_para = 82, RULE_paracada = 83, RULE_de = 84, 
		RULE_desde = 85, RULE_hasta = 86, RULE_conpaso = 87, RULE_hacer = 88, 
		RULE_finpara = 89, RULE_mientras = 90, RULE_finmientras = 91, RULE_repetir = 92, 
		RULE_hastaque = 93, RULE_segun = 94, RULE_deotromodo = 95, RULE_finsegun = 96, 
		RULE_funcion = 97, RULE_porvalor = 98, RULE_porreferencia = 99, RULE_finfuncion = 100, 
		RULE_pi = 101, RULE_raiz = 102, RULE_abs = 103, RULE_ln = 104, RULE_expf = 105, 
		RULE_sen = 106, RULE_cos = 107, RULE_tan = 108, RULE_asen = 109, RULE_acos = 110, 
		RULE_atan = 111, RULE_trunc = 112, RULE_redon = 113, RULE_azar = 114, 
		RULE_aleatorio = 115, RULE_longitud = 116, RULE_mayusculas = 117, RULE_minusculas = 118, 
		RULE_subcadena = 119, RULE_concatenar = 120, RULE_convertiranumero = 121, 
		RULE_convertiratexto = 122, RULE_string = 123, RULE_numero = 124, RULE_valor = 125, 
		RULE_logica = 126;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "inicioalgoritmo", "instruccion", "primitiva", "definir_var", 
			"dimension_var", "arreglo", "asignacion", "lectura", "escritura", "otras", 
			"borrando", "esperar_tecla", "esperar_tiempo", "definir_func", "argumentos", 
			"funciones", "funciones_arg", "control", "condicional", "si_op", "segun_op", 
			"repetitiva", "mientras_op", "repetir_op", "para_op", "llamar_funcion", 
			"expr", "exp", "condicion", "expr_relacional", "expr_logico", "mayor", 
			"menor", "igual", "menorigual", "mayorigual", "distinto", "conjuncion", 
			"disyuncion", "negacion", "suma", "resta", "multiplicacion", "division", 
			"potenciacion", "modulo", "variable", "identificador", "asignar", "parentesis_abrir", 
			"parentesis_cerrar", "corchete_abrir", "corchete_cerrar", "saltolinea", 
			"signoigual", "coma", "dospuntos", "puntocoma", "algoritmo", "finalgoritmo", 
			"definir", "dimension", "como", "real", "entero", "logico", "verdadero", 
			"falso", "caracter", "leer", "escribir", "borrar", "esperartecla", "esperar", 
			"segundos", "milisegundos", "sinsaltar", "si", "entonces", "sino", "finsi", 
			"para", "paracada", "de", "desde", "hasta", "conpaso", "hacer", "finpara", 
			"mientras", "finmientras", "repetir", "hastaque", "segun", "deotromodo", 
			"finsegun", "funcion", "porvalor", "porreferencia", "finfuncion", "pi", 
			"raiz", "abs", "ln", "expf", "sen", "cos", "tan", "asen", "acos", "atan", 
			"trunc", "redon", "azar", "aleatorio", "longitud", "mayusculas", "minusculas", 
			"subcadena", "concatenar", "convertiranumero", "convertiratexto", "string", 
			"numero", "valor", "logica"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'['", "']'", "'='", "','", "':'", "';'", 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, "'+'", "'-'", "'*'", "'/'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMENTARIO_LINEA", "ASIGNAR", "PARENTESIS_ABRIR", "PARENTESIS_CERRAR", 
			"CORCHETE_ABRIR", "CORCHETE_CERRAR", "SIGNOIGUAL", "COMA", "DOSPUNTOS", 
			"PUNTOCOMA", "SALTOLINEA", "MAYOR", "MENOR", "IGUAL", "MENORIGUAL", "MAYORIGUAL", 
			"DISTINTO", "ESPAR", "ESIMPAR", "ESPOSITIVO", "ESNEGATIVO", "ESCERO", 
			"ESDIVISIBLE", "ES", "CONJUNCION", "DISYUNCION", "NEGACION", "SUMA", 
			"RESTA", "MULTIPLICACION", "DIVISION", "POTENCIACION", "MODULO", "INT", 
			"FLOAT", "STRING", "STRING_SIMPLE", "STRING_DOBLE", "ALGORITMO", "FINALGORITMO", 
			"DEFINIR", "COMO", "REAL", "ENTERO", "LOGICO", "VERDADERO", "FALSO", 
			"CARACTER", "DIMENSION", "LEER", "ESCRIBIR", "BORRAR", "ESPERARTECLA", 
			"ESPERAR", "SEGUNDOS", "MILISEGUNDOS", "SINSALTAR", "SI", "ENTONCES", 
			"SINO", "FINSI", "SEGUN", "HACER", "CONPASO", "DEOTROMODO", "FINSEGUN", 
			"MIENTRAS", "FINMIENTRAS", "REPETIR", "HASTAQUE", "PARA", "PARACADA", 
			"DESDE", "DE", "HASTA", "FINPARA", "FUNCION", "PORVALOR", "PORREFERENCIA", 
			"FINFUNCION", "PI", "RAIZ", "ABS", "LN", "EXP", "SEN", "COS", "TAN", 
			"ASEN", "ACOS", "ATAN", "AZAR", "ALEATORIO", "TRUNC", "REDON", "CONVERTIRANUMERO", 
			"CONVERTIRATEXTO", "LONGITUD", "SUBCADENA", "MAYUSCULAS", "MINUSCULAS", 
			"CONCATENAR", "IDENTIFICADOR", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "PSeIntParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public PSeIntParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public InicioalgoritmoContext inicioalgoritmo() {
			return getRuleContext(InicioalgoritmoContext.class,0);
		}
		public FinalgoritmoContext finalgoritmo() {
			return getRuleContext(FinalgoritmoContext.class,0);
		}
		public List<Definir_funcContext> definir_func() {
			return getRuleContexts(Definir_funcContext.class);
		}
		public Definir_funcContext definir_func(int i) {
			return getRuleContext(Definir_funcContext.class,i);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public List<InstruccionContext> instruccion() {
			return getRuleContexts(InstruccionContext.class);
		}
		public InstruccionContext instruccion(int i) {
			return getRuleContext(InstruccionContext.class,i);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitPrograma(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(257);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCION) {
				{
				{
				setState(254);
				definir_func();
				}
				}
				setState(259);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(260);
			inicioalgoritmo();
			setState(262); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(261);
				saltolinea();
				}
				}
				setState(264); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==SALTOLINEA );
			setState(269);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 41)) & ~0x3f) == 0 && ((1L << (_la - 41)) & ((1L << (DEFINIR - 41)) | (1L << (DIMENSION - 41)) | (1L << (LEER - 41)) | (1L << (ESCRIBIR - 41)) | (1L << (BORRAR - 41)) | (1L << (ESPERARTECLA - 41)) | (1L << (ESPERAR - 41)) | (1L << (SI - 41)) | (1L << (SEGUN - 41)) | (1L << (MIENTRAS - 41)) | (1L << (REPETIR - 41)) | (1L << (PARA - 41)) | (1L << (PARACADA - 41)) | (1L << (IDENTIFICADOR - 41)))) != 0)) {
				{
				{
				setState(266);
				instruccion();
				}
				}
				setState(271);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(272);
			finalgoritmo();
			setState(276);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SALTOLINEA) {
				{
				{
				setState(273);
				saltolinea();
				}
				}
				setState(278);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(282);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==FUNCION) {
				{
				{
				setState(279);
				definir_func();
				}
				}
				setState(284);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InicioalgoritmoContext extends ParserRuleContext {
		public AlgoritmoContext algoritmo() {
			return getRuleContext(AlgoritmoContext.class,0);
		}
		public IdentificadorContext identificador() {
			return getRuleContext(IdentificadorContext.class,0);
		}
		public InicioalgoritmoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inicioalgoritmo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterInicioalgoritmo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitInicioalgoritmo(this);
		}
	}

	public final InicioalgoritmoContext inicioalgoritmo() throws RecognitionException {
		InicioalgoritmoContext _localctx = new InicioalgoritmoContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_inicioalgoritmo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(285);
			algoritmo();
			setState(286);
			identificador();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InstruccionContext extends ParserRuleContext {
		public PrimitivaContext primitiva() {
			return getRuleContext(PrimitivaContext.class,0);
		}
		public PuntocomaContext puntocoma() {
			return getRuleContext(PuntocomaContext.class,0);
		}
		public List<SaltolineaContext> saltolinea() {
			return getRuleContexts(SaltolineaContext.class);
		}
		public SaltolineaContext saltolinea(int i) {
			return getRuleContext(SaltolineaContext.class,i);
		}
		public ControlContext control() {
			return getRuleContext(ControlContext.class,0);
		}
		public Llamar_funcionContext llamar_funcion() {
			return getRuleContext(Llamar_funcionContext.class,0);
		}
		public InstruccionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_instruccion; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterInstruccion(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitInstruccion(this);
		}
	}

	public final InstruccionContext instruccion() throws RecognitionException {
		InstruccionContext _localctx = new InstruccionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_instruccion);
		int _la;
		try {
			setState(304);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(288);
				primitiva();
				setState(290);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==PUNTOCOMA) {
					{
					setState(289);
					puntocoma();
					}
				}

				setState(293); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(292);
					saltolinea();
					}
					}
					setState(295); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SALTOLINEA );
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(297);
				control();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(298);
				llamar_funcion();
				setState(300); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(299);
					saltolinea();
					}
					}
					setState(302); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==SALTOLINEA );
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitivaContext extends ParserRuleContext {
		public Definir_varContext definir_var() {
			return getRuleContext(Definir_varContext.class,0);
		}
		public Dimension_varContext dimension_var() {
			return getRuleContext(Dimension_varContext.class,0);
		}
		public AsignacionContext asignacion() {
			return getRuleContext(AsignacionContext.class,0);
		}
		public LecturaContext lectura() {
			return getRuleContext(LecturaContext.class,0);
		}
		public EscrituraContext escritura() {
			return getRuleContext(EscrituraContext.class,0);
		}
		public OtrasContext otras() {
			return getRuleContext(OtrasContext.class,0);
		}
		public PrimitivaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitiva; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterPrimitiva(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitPrimitiva(this);
		}
	}

	public final PrimitivaContext primitiva() throws RecognitionException {
		PrimitivaContext _localctx = new PrimitivaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_primitiva);
		try {
			setState(312);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case DEFINIR:
				enterOuterAlt(_localctx, 1);
				{
				setState(306);
				definir_var();
				}
				break;
			case DIMENSION:
				enterOuterAlt(_localctx, 2);
				{
				setState(307);
				dimension_var();
				}
				break;
			case IDENTIFICADOR:
				enterOuterAlt(_localctx, 3);
				{
				setState(308);
				asignacion();
				}
				break;
			case LEER:
				enterOuterAlt(_localctx, 4);
				{
				setState(309);
				lectura();
				}
				break;
			case ESCRIBIR:
				enterOuterAlt(_localctx, 5);
				{
				setState(310);
				escritura();
				}
				break;
			case BORRAR:
			case ESPERARTECLA:
			case ESPERAR:
				enterOuterAlt(_localctx, 6);
				{
				setState(311);
				otras();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Definir_varContext extends ParserRuleContext {
		public DefinirContext definir() {
			return getRuleContext(DefinirContext.class,0);
		}
		public List<VariableContext> variable() {
			return getRuleContexts(VariableContext.class);
		}
		public VariableContext variable(int i) {
			return getRuleContext(VariableContext.class,i);
		}
		public ComoContext como() {
			return getRuleContext(ComoContext.class,0);
		}
		public RealContext real() {
			return getRuleContext(RealContext.class,0);
		}
		public EnteroContext entero() {
			return getRuleContext(EnteroContext.class,0);
		}
		public LogicoContext logico() {
			return getRuleContext(LogicoContext.class,0);
		}
		public CaracterContext caracter() {
			return getRuleContext(CaracterContext.class,0);
		}
		public List<ComaContext> coma() {
			return getRuleContexts(ComaContext.class);
		}
		public ComaContext coma(int i) {
			return getRuleContext(ComaContext.class,i);
		}
		public Definir_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definir_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterDefinir_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitDefinir_var(this);
		}
	}

	public final Definir_varContext definir_var() throws RecognitionException {
		Definir_varContext _localctx = new Definir_varContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_definir_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(314);
			definir();
			setState(315);
			variable();
			setState(321);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMA) {
				{
				{
				setState(316);
				coma();
				setState(317);
				variable();
				}
				}
				setState(323);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(324);
			como();
			setState(329);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case REAL:
				{
				setState(325);
				real();
				}
				break;
			case ENTERO:
				{
				setState(326);
				entero();
				}
				break;
			case LOGICO:
				{
				setState(327);
				logico();
				}
				break;
			case CARACTER:
				{
				setState(328);
				caracter();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dimension_varContext extends ParserRuleContext {
		public DimensionContext dimension() {
			return getRuleContext(DimensionContext.class,0);
		}
		public List<ArregloContext> arreglo() {
			return getRuleContexts(ArregloContext.class);
		}
		public ArregloContext arreglo(int i) {
			return getRuleContext(ArregloContext.class,i);
		}
		public List<ComaContext> coma() {
			return getRuleContexts(ComaContext.class);
		}
		public ComaContext coma(int i) {
			return getRuleContext(ComaContext.class,i);
		}
		public PuntocomaContext puntocoma() {
			return getRuleContext(PuntocomaContext.class,0);
		}
		public Dimension_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dimension_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).enterDimension_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof PSeIntParserListener ) ((PSeIntParserListener)listener).exitDimension_var(this);
		}
	}
